[package]
name = "binary"
description = "Provides utilities to serialize and deserialize data in Binary format"
authors = ["Kalcor"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { git = "https://github.com/stcraft/bytes" }